Avant grand nettoyage suite à bascule vers twig.

--- a/src/templates/intro.html.twig
+++ b/src/templates/intro.html.twig
@@ -1,6 +1,3 @@
-<?php
-$base64 = base64_encode(file_get_contents(__DIR__.'/assets/img/moi-micro.jpg'));
-?>
 <div class="container g-pt-30">
 	<div class="row g-mb-30">
 		<div class="col-md-7 align-self-center">
@@ -34,7 +31,8 @@ $base64 = base64_encode(file_get_contents(__DIR__.'/assets/img/moi-micro.jpg'));
 		<div class="col-md-5 text-center g-pt-100">
 			<img
 			class="img-fluid w-70 g-mb-20 g-mb-0--md"
-			src="data:image/jpeg;base64, <?=$base64?>" alt="Antoine Viau">
+			src="data:image/jpeg;base64, {{photo}}" alt="Antoine Viau">
 		</div>
 	</div>
 </div>
+
