--- a/src/templates/one-page.html.twig
+++ b/src/templates/one-page.html.twig
@@ -28,7 +28,7 @@
 				color: black !important;
 			}
 			.photo {
-				width: 4cm !important;
+				width: 3.5cm !important;
 			}
 		</style>
 	</head>
@@ -64,12 +64,14 @@
 				<div class="col-md-6 g-brd-right g-brd-1 g-brd-gray-light-v1">
 					<div class="skills">
 						<h3 class="h3 g-mb-15">Compétences</h3>
-						{% for domain in domains %}
-							<div class="domain g-mb-10">
-								<h4 class="h5 g-font-weight-600">{{domain.label}}</h4>
-								{% for techno in domain.technos %}
-									<span class="g-mb-20 g-font-weight-600">{{techno.label}}</span>
-								{% endfor %}
+							{% for domain in domains %}
+								<div class="domain g-mb-10">
+									<h4 class="h5 g-font-weight-600">
+										{{ domain.label }}
+									</h4>
+									<span class="g-mb-20 g-font-weight-600">
+										{{ domain.technos | map(t => "#{t.label}") | join(', ') }}
+									</span>
 								</div>
 							{% endfor %}
 						</div>
