--- a/src/templates/projects.html.twig
+++ b/src/templates/projects.html.twig
@@ -1,16 +1,20 @@
 <style>
-@media print
-{
-	.project .h5 a {
-		font-size: 1.25rem !important;
-		color: #000000;
+	@media print {
+		.project .h5 a {
+			font-size: 1.25rem !important;
+			color: #000000;
+		}
+
+		.technos .btn {
+			cursor: text !important;
+		}
 	}
-}
 </style>
 <div class="container ">
-	
+
 	<div class="lead text-center g-mb-20">
-		Github : <a href="https://github.com/AntoineViau">https://github.com/AntoineViau</a>
+		Github :
+		<a href="https://github.com/AntoineViau">https://github.com/AntoineViau</a>
 	</div>
 	{% for project in projects %}
 		<div class="project row g-mb-20">
@@ -18,27 +22,24 @@
 			<div class="col-lg-6">
 				<div class="">
 					<h2 class="h5 text-uppercase g-font-weight-300 u-heading-v2__title">
-					<a href="{{project.link}}">{{project.title}}</a>
+						<a href="{{project.link}}">{{project.title}}</a>
 					</h2>
 				</div>
 				<p class="g-mb-10">
 					{{project.desc}}
 				</p>
-				<div>
+				<div class="technos">
 					{% for techno in project.technos %}
-						<a href="#" class="btn btn-sm g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-brd-2 g-rounded-50 g-mr-10 g-mb-15">
+						<span class="btn btn-sm g-font-weight-600 g-letter-spacing-0_5 text-uppercase g-brd-2 g-rounded-50 g-mr-10 g-mb-15">
 							{{techno}}
-						</a>
-					{% endfor %}					
+						</span>
+					{% endfor %}
 				</div>
 			</div>
 
 			<div class="col-md-6 g-mb-0--lg text-center no-print">
 				<a href="{{project.link}}">
-					<img class="img-fluid g-brd-around g-brd-gray-light-v1 no-print"
-					src="data:image/jpeg;base64, {{project.picture}}"
-					alt="Antoine Viau, projet {{project.title}}"
-					>
+					<img class="img-fluid g-brd-around g-brd-gray-light-v1 no-print" src="data:image/jpeg;base64, {{project.picture}}" alt="Antoine Viau, projet {{project.title}}">
 				</a>
 			</div>
 
