Update pour LeBonCoin + améliorations diverses genre readme

--- a/src/templates/skills.html.twig
+++ b/src/templates/skills.html.twig
@@ -13,7 +13,7 @@ border-bottom: 1px solid black;
 				
 				<article class="u-shadow-v2 text-center g-bg-white g-color-gray-dark-v5 g-brd g-brd-3 g-bg-gray-light-v5 g-brd-gray-light-v4 g-color-gray-dark-v5 g-brd-primary g-transition-0_3">
 					
-					<header class="g-bg-gray-light-v1 g-color-white g-pa-20">
+					<header class="g-bg-indigo g-color-white g-pa-20">
 						<h4 class="h6 text-uppercase g-font-weight-600">
 						{{domain.label}}
 						</h4>
@@ -21,7 +21,7 @@ border-bottom: 1px solid black;
 					<div class="skills g-px-20 g-py-25 g-min-height-360">
 						<ul class="text-uppercase list-unstyled g-mb-30">
 							{% for techno in domain.technos %}
-								<li class="g-mb-20 g-font-weight-600">
+								<li class="g-mb-20 g-color-gray-dark-v3 g-font-weight-600">
 								{{techno.label}}
 							</li>
 							{% endfor %}
